Prevent homepage shift

--- a/ui/scss/component/_home.scss
+++ b/ui/scss/component/_home.scss
@@ -141,6 +141,7 @@
   border-radius: var(--border-radius);
   padding: 0 var(--spacing-m);
   height: var(--height-button);
+  margin-top: -9px;
   margin-left: auto;
 
   .icon {
